--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "node-complete-social-network-prep",
+  "name": "node-sns-example-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "socket.io-client": "^4.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
